@@ -1,0 +1,14 @@
+smaller fixes for make distcheck
+adding variable-attributes and template-replacements to gribcdmreader
+--This line, and those below, will be ignored--
+
+M    Makefile.in
+M    src/CDMReader.cc
+M    src/GribCDMReader.cc
+M    src/CDMExtractor.cc
+M    src/CDMQualityExtractor.cc
+M    src/GribFileIndex.cc
+M    share/etc/cdmGribReaderConfig.xml
+M    test/testGribReader.cc
+M    include/fimex/GribCDMReader.h
+M    Makefile.am
